--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.534.0",
     "next": "15.4.5",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.2"
