--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,10 +1,10 @@
-Django==4.2.7
-djangorestframework==3.14.0
-django-cors-headers==4.3.1
-djongo==1.3.6
+Django==5.2.4
+djangorestframework==3.16.0
+django-cors-headers==4.7.0
 pymongo==4.5.0
-channels==4.0.0
-channels-redis==4.1.0
+dnspython==2.2.1
+channels==4.3.0
+channels-redis==4.4.0
 redis==5.0.1
 python-socketio==5.9.0
 eventlet==0.33.3
